Progress tampilan projek

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,7 @@ section {
 
 .pic{
   position: relative;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 .overlay {
   position: absolute;
